--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
   <body>
     <main id="main"></main>
-    <script src="js/index.js"></script>
+    <script src="js/index.js">
+    //code along completed
+    </script>
   </body>
 
 </html>
